syntax = "proto3";
package within.website.x.patchouli.v1;

import "google/protobuf/timestamp.proto";

service Syndicate {
  rpc Info(TwitchInfoReq) returns (TwitchInfoResp) {};
  rpc Download(TwitchDownloadReq) returns (TwitchDownloadResp) {};
}

message TwitchInfoReq { string url = 1; }

message TwitchInfoResp {
  string id = 1;
  string title = 2;
  string thumbnail_url = 3;
  string duration = 4;
  google.protobuf.Timestamp upload_date = 5;
  string url = 6;
}

message TwitchDownloadReq { string url = 1; }

message TwitchDownloadResp {
  string url = 1;
  string location = 2;
}